# mmtk-dotnet

./: .gitignore  .gitmodules
dotnet/: CMakeLists.txt  build.sh
dotnet/mmtk/: mmtk.h
dotnet/src/: CMakeLists.txt  mmtkgc.cpp  mmtkhandlemanager.cpp  mmtkhandlemanager.h  mmtkhandlestore.cpp  mmtkhandlestore.h  mmtkheap.cpp  mmtkheap.h
mmtk/: Cargo.toml
mmtk/src/: active_plan.rs  api.rs  collection.rs  lib.rs  object_model.rs  reference_glue.rs  scanning.rs
